target/generated-sources/antlr4/ee/ioc/cs/vsle/parser/SpecificationParserParser.java
// Generated from SpecificationParser.g4 by ANTLR 4.1
package ee.ioc.cs.vsle.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SpecificationParserParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__33=1, T__32=2, T__31=3, T__30=4, T__29=5, T__28=6, T__27=7, T__26=8, 
		T__25=9, T__24=10, T__23=11, T__22=12, T__21=13, T__20=14, T__19=15, T__18=16, 
		T__17=17, T__16=18, T__15=19, T__14=20, T__13=21, T__12=22, T__11=23, 
		T__10=24, T__9=25, T__8=26, T__7=27, T__6=28, T__5=29, T__4=30, T__3=31, 
		T__2=32, T__1=33, T__0=34, NUMBER=35, INTEGER=36, STRING=37, IDENTIFIER=38, 
		ALIAS_ELEMENT_REF=39, WS=40, COMMENT=41, BLOCK_COMMENT=42, JAVA_BEFORE_SPEC=43, 
		JAVA_AFTER_SPEC=44;
	public static final String[] tokenNames = {
		"<INVALID>", "'long'", "'short'", "']'", "','", "'['", "'-'", "'*'", "'('", 
		"'int'", "'false'", "'{'", "'double'", "'boolean'", "'}'", "'float'", 
		"'true'", "'specification'", "'static'", "'char'", "'super'", "'->'", 
		"'byte'", "'|-'", "'^'", "'.'", "')'", "'+'", "'='", "';'", "'*.'", "'alias'", 
		"'const'", "'new'", "'/'", "NUMBER", "INTEGER", "STRING", "IDENTIFIER", 
		"ALIAS_ELEMENT_REF", "WS", "COMMENT", "BLOCK_COMMENT", "JAVA_BEFORE_SPEC", 
		"JAVA_AFTER_SPEC"
	};
	public static final int
		RULE_metaInterfase = 0, RULE_superMetaInterface = 1, RULE_specification = 2, 
		RULE_variableDeclaration = 3, RULE_variableModifier = 4, RULE_variableDeclarator = 5, 
		RULE_variableAssignment = 6, RULE_axiom = 7, RULE_subtask = 8, RULE_subtaskList = 9, 
		RULE_exceptionList = 10, RULE_goal = 11, RULE_aliasDeclaration = 12, RULE_aliasStructure = 13, 
		RULE_aliasDefinition = 14, RULE_type = 15, RULE_classType = 16, RULE_primitiveType = 17, 
		RULE_equation = 18, RULE_expression = 19, RULE_term = 20, RULE_array = 21, 
		RULE_inArrayVariableAssigner = 22, RULE_variableAssigner = 23, RULE_variableInitializer = 24, 
		RULE_variableIdentifier = 25, RULE_variableIdentifierList = 26;
	public static final String[] ruleNames = {
		"metaInterfase", "superMetaInterface", "specification", "variableDeclaration", 
		"variableModifier", "variableDeclarator", "variableAssignment", "axiom", 
		"subtask", "subtaskList", "exceptionList", "goal", "aliasDeclaration", 
		"aliasStructure", "aliasDefinition", "type", "classType", "primitiveType", 
		"equation", "expression", "term", "array", "inArrayVariableAssigner", 
		"variableAssigner", "variableInitializer", "variableIdentifier", "variableIdentifierList"
	};

	@Override
	public String getGrammarFileName() { return "SpecificationParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }


		

	public SpecificationParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MetaInterfaseContext extends ParserRuleContext {
		public SuperMetaInterfaceContext superMetaInterface() {
			return getRuleContext(SuperMetaInterfaceContext.class,0);
		}
		public SpecificationContext specification() {
			return getRuleContext(SpecificationContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(SpecificationParserParser.IDENTIFIER, 0); }
		public MetaInterfaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metaInterfase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).enterMetaInterfase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).exitMetaInterfase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationParserVisitor ) return ((SpecificationParserVisitor<? extends T>)visitor).visitMetaInterfase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MetaInterfaseContext metaInterfase() throws RecognitionException {
		MetaInterfaseContext _localctx = new MetaInterfaseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_metaInterfase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54); match(17);
			setState(55); match(IDENTIFIER);
			setState(57);
			_la = _input.LA(1);
			if (_la==20) {
				{
				setState(56); superMetaInterface();
				}
			}

			setState(59); match(11);
			setState(60); specification();
			setState(61); match(14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SuperMetaInterfaceContext extends ParserRuleContext {
		public List<ClassTypeContext> classType() {
			return getRuleContexts(ClassTypeContext.class);
		}
		public ClassTypeContext classType(int i) {
			return getRuleContext(ClassTypeContext.class,i);
		}
		public SuperMetaInterfaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_superMetaInterface; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).enterSuperMetaInterface(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).exitSuperMetaInterface(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationParserVisitor ) return ((SpecificationParserVisitor<? extends T>)visitor).visitSuperMetaInterface(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SuperMetaInterfaceContext superMetaInterface() throws RecognitionException {
		SuperMetaInterfaceContext _localctx = new SuperMetaInterfaceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_superMetaInterface);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63); match(20);
			setState(64); classType();
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==4) {
				{
				{
				setState(65); match(4);
				setState(66); classType();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpecificationContext extends ParserRuleContext {
		public List<GoalContext> goal() {
			return getRuleContexts(GoalContext.class);
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return getRuleContext(VariableDeclarationContext.class,i);
		}
		public AliasDeclarationContext aliasDeclaration(int i) {
			return getRuleContext(AliasDeclarationContext.class,i);
		}
		public AxiomContext axiom(int i) {
			return getRuleContext(AxiomContext.class,i);
		}
		public AliasDefinitionContext aliasDefinition(int i) {
			return getRuleContext(AliasDefinitionContext.class,i);
		}
		public List<VariableAssignmentContext> variableAssignment() {
			return getRuleContexts(VariableAssignmentContext.class);
		}
		public List<VariableDeclarationContext> variableDeclaration() {
			return getRuleContexts(VariableDeclarationContext.class);
		}
		public VariableAssignmentContext variableAssignment(int i) {
			return getRuleContext(VariableAssignmentContext.class,i);
		}
		public List<AxiomContext> axiom() {
			return getRuleContexts(AxiomContext.class);
		}
		public GoalContext goal(int i) {
			return getRuleContext(GoalContext.class,i);
		}
		public List<EquationContext> equation() {
			return getRuleContexts(EquationContext.class);
		}
		public List<AliasDeclarationContext> aliasDeclaration() {
			return getRuleContexts(AliasDeclarationContext.class);
		}
		public EquationContext equation(int i) {
			return getRuleContext(EquationContext.class,i);
		}
		public List<AliasDefinitionContext> aliasDefinition() {
			return getRuleContexts(AliasDefinitionContext.class);
		}
		public SpecificationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specification; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).enterSpecification(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).exitSpecification(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationParserVisitor ) return ((SpecificationParserVisitor<? extends T>)visitor).visitSpecification(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecificationContext specification() throws RecognitionException {
		SpecificationContext _localctx = new SpecificationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_specification);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 2) | (1L << 5) | (1L << 6) | (1L << 8) | (1L << 9) | (1L << 12) | (1L << 13) | (1L << 15) | (1L << 18) | (1L << 19) | (1L << 21) | (1L << 22) | (1L << 31) | (1L << 32) | (1L << NUMBER) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(79);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(72); variableDeclaration();
					}
					break;

				case 2:
					{
					setState(73); variableAssignment();
					}
					break;

				case 3:
					{
					setState(74); axiom();
					}
					break;

				case 4:
					{
					setState(75); goal();
					}
					break;

				case 5:
					{
					setState(76); aliasDeclaration();
					}
					break;

				case 6:
					{
					setState(77); aliasDefinition();
					}
					break;

				case 7:
					{
					setState(78); equation();
					}
					break;
				}
				setState(81); match(29);
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public VariableModifierContext variableModifier() {
			return getRuleContext(VariableModifierContext.class,0);
		}
		public VariableDeclaratorContext variableDeclarator(int i) {
			return getRuleContext(VariableDeclaratorContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<VariableDeclaratorContext> variableDeclarator() {
			return getRuleContexts(VariableDeclaratorContext.class);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).enterVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).exitVariableDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationParserVisitor ) return ((SpecificationParserVisitor<? extends T>)visitor).visitVariableDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variableDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_la = _input.LA(1);
			if (_la==18 || _la==32) {
				{
				setState(88); variableModifier();
				}
			}

			setState(91); type();
			setState(92); variableDeclarator();
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==4) {
				{
				{
				setState(93); match(4);
				setState(94); variableDeclarator();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableModifierContext extends ParserRuleContext {
		public VariableModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableModifier; }
	 
		public VariableModifierContext() { }
		public void copyFrom(VariableModifierContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StaticVariableContext extends VariableModifierContext {
		public StaticVariableContext(VariableModifierContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).enterStaticVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).exitStaticVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationParserVisitor ) return ((SpecificationParserVisitor<? extends T>)visitor).visitStaticVariable(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConstantVariableContext extends VariableModifierContext {
		public ConstantVariableContext(VariableModifierContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).enterConstantVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).exitConstantVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationParserVisitor ) return ((SpecificationParserVisitor<? extends T>)visitor).visitConstantVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableModifierContext variableModifier() throws RecognitionException {
		VariableModifierContext _localctx = new VariableModifierContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variableModifier);
		try {
			setState(102);
			switch (_input.LA(1)) {
			case 18:
				_localctx = new StaticVariableContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(100); match(18);
				}
				break;
			case 32:
				_localctx = new ConstantVariableContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(101); match(32);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclaratorContext extends ParserRuleContext {
		public VariableDeclaratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclarator; }
	 
		public VariableDeclaratorContext() { }
		public void copyFrom(VariableDeclaratorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VariableDeclaratorInitializerContext extends VariableDeclaratorContext {
		public TerminalNode IDENTIFIER() { return getToken(SpecificationParserParser.IDENTIFIER, 0); }
		public VariableInitializerContext variableInitializer() {
			return getRuleContext(VariableInitializerContext.class,0);
		}
		public VariableDeclaratorInitializerContext(VariableDeclaratorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).enterVariableDeclaratorInitializer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).exitVariableDeclaratorInitializer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationParserVisitor ) return ((SpecificationParserVisitor<? extends T>)visitor).visitVariableDeclaratorInitializer(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VariableDeclaratorAssignerContext extends VariableDeclaratorContext {
		public TerminalNode IDENTIFIER() { return getToken(SpecificationParserParser.IDENTIFIER, 0); }
		public VariableAssignerContext variableAssigner() {
			return getRuleContext(VariableAssignerContext.class,0);
		}
		public VariableDeclaratorAssignerContext(VariableDeclaratorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).enterVariableDeclaratorAssigner(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).exitVariableDeclaratorAssigner(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationParserVisitor ) return ((SpecificationParserVisitor<? extends T>)visitor).visitVariableDeclaratorAssigner(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclaratorContext variableDeclarator() throws RecognitionException {
		VariableDeclaratorContext _localctx = new VariableDeclaratorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variableDeclarator);
		int _la;
		try {
			setState(112);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new VariableDeclaratorInitializerContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(104); match(IDENTIFIER);
				setState(107);
				_la = _input.LA(1);
				if (_la==28) {
					{
					setState(105); match(28);
					setState(106); variableInitializer();
					}
				}

				}
				break;

			case 2:
				_localctx = new VariableDeclaratorAssignerContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(109); match(IDENTIFIER);
				{
				setState(110); match(28);
				setState(111); variableAssigner();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableAssignmentContext extends ParserRuleContext {
		public VariableIdentifierContext variableIdentifier() {
			return getRuleContext(VariableIdentifierContext.class,0);
		}
		public VariableAssignerContext variableAssigner() {
			return getRuleContext(VariableAssignerContext.class,0);
		}
		public VariableAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableAssignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).enterVariableAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).exitVariableAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationParserVisitor ) return ((SpecificationParserVisitor<? extends T>)visitor).visitVariableAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableAssignmentContext variableAssignment() throws RecognitionException {
		VariableAssignmentContext _localctx = new VariableAssignmentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variableAssignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); variableIdentifier();
			setState(115); match(28);
			setState(116); variableAssigner();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AxiomContext extends ParserRuleContext {
		public VariableIdentifierListContext inputVariables;
		public VariableIdentifierListContext outputVariables;
		public Token method;
		public VariableIdentifierListContext variableIdentifierList(int i) {
			return getRuleContext(VariableIdentifierListContext.class,i);
		}
		public SubtaskListContext subtaskList() {
			return getRuleContext(SubtaskListContext.class,0);
		}
		public ExceptionListContext exceptionList() {
			return getRuleContext(ExceptionListContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(SpecificationParserParser.IDENTIFIER, 0); }
		public List<VariableIdentifierListContext> variableIdentifierList() {
			return getRuleContexts(VariableIdentifierListContext.class);
		}
		public AxiomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_axiom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).enterAxiom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).exitAxiom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationParserVisitor ) return ((SpecificationParserVisitor<? extends T>)visitor).visitAxiom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AxiomContext axiom() throws RecognitionException {
		AxiomContext _localctx = new AxiomContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_axiom);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(118); ((AxiomContext)_localctx).inputVariables = variableIdentifierList();
				}
				break;

			case 2:
				{
				setState(119); subtaskList();
				}
				break;

			case 3:
				{
				{
				setState(120); subtaskList();
				setState(121); match(4);
				setState(122); ((AxiomContext)_localctx).inputVariables = variableIdentifierList();
				}
				}
				break;
			}
			setState(126); match(21);
			setState(127); ((AxiomContext)_localctx).outputVariables = variableIdentifierList();
			setState(130);
			_la = _input.LA(1);
			if (_la==4) {
				{
				setState(128); match(4);
				setState(129); exceptionList();
				}
			}

			setState(132); match(11);
			setState(133); ((AxiomContext)_localctx).method = match(IDENTIFIER);
			setState(134); match(14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubtaskContext extends ParserRuleContext {
		public ClassTypeContext context;
		public VariableIdentifierListContext inputVariables;
		public VariableIdentifierListContext outputVariables;
		public VariableIdentifierListContext variableIdentifierList(int i) {
			return getRuleContext(VariableIdentifierListContext.class,i);
		}
		public ClassTypeContext classType() {
			return getRuleContext(ClassTypeContext.class,0);
		}
		public List<VariableIdentifierListContext> variableIdentifierList() {
			return getRuleContexts(VariableIdentifierListContext.class);
		}
		public SubtaskContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subtask; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).enterSubtask(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).exitSubtask(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationParserVisitor ) return ((SpecificationParserVisitor<? extends T>)visitor).visitSubtask(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubtaskContext subtask() throws RecognitionException {
		SubtaskContext _localctx = new SubtaskContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_subtask);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); match(5);
			setState(140);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(137); ((SubtaskContext)_localctx).context = classType();
				setState(138); match(23);
				}
				break;
			}
			setState(142); ((SubtaskContext)_localctx).inputVariables = variableIdentifierList();
			setState(143); match(21);
			setState(144); ((SubtaskContext)_localctx).outputVariables = variableIdentifierList();
			setState(145); match(3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubtaskListContext extends ParserRuleContext {
		public SubtaskContext subtask(int i) {
			return getRuleContext(SubtaskContext.class,i);
		}
		public List<SubtaskContext> subtask() {
			return getRuleContexts(SubtaskContext.class);
		}
		public SubtaskListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subtaskList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).enterSubtaskList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationParserListener ) ((SpecificationParserListener)listener).exitSubtaskList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationParserVisitor ) return ((SpecificationParserVisitor<? extends T>)visitor).visitSubtaskList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubtaskListContext subtaskList() throws RecognitionException {
		SubtaskListContext _localctx = new SubtaskListContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_subtaskList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(147); subtask();
			setState(152);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(148); match(4);
					setState(149); subtask();
					}
					} 
				}
				setState(154);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
